#278 - better rendering of file table lines - 2

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -335,22 +335,22 @@ file_copier.progress_dialog.title=Kopiervorgang aktiv
 
 fileinfo.availability=Verf\u00fcgbarkeit
 fileinfo.available=verf\u00fcgbar
-fileinfo.deleted=gel\u00f6scht
+file_info.deleted=gel\u00f6scht
 fileinfo.downloading=Ladend
-fileinfo.downloading_from_member=L\u00e4d von {0}
-fileinfo.expected=erwartet
+file_info.downloading_from_member=L\u00e4d von {0}
+file_info.expected=erwartet
 fileinfo.header=Datei Informationen
-fileinfo.ignore=Datei ausgeschlossen
-fileinfo.in_recycle_bin=Im Papierkorb
+file_info.ignore=Datei ausgeschlossen
+file_info.in_recycle_bin=Im Papierkorb
 fileinfo.location=Ort
 fileinfo.modified_by=Bearbeitet von
 fileinfo.modified_date=Bearbeitet am
-fileinfo.name=Name
+file_info.name=Name
 fileinfo.newer_available=neuere Version verf\u00fcgbar
 fileinfo.new_version_availeble=Neuere Version verf\u00fcgbar
 fileinfo.normal=Lokal verf\u00fcgbar
 fileinfo.not_available=nicht verf\u00fcgbar
-fileinfo.remote_deleted=Neuere Version\: Gel\u00f6scht
+file_info.remote_deleted=Neuere Version\: Gel\u00f6scht
 fileinfo.status=Status
 fileinfo.uploading=Sendend
 fileinfo.version=Version
@@ -363,7 +363,7 @@ filelist.file_filter.label=Such- und Filterleiste
 filelist.file_filter.normal=lokal
 filelist.file_filter.searchfieldinfo=Suche nach...
 filelist.modified_by=Ge\u00e4ndert von
-filelist.name=Name
+file_list.name=Name
 filelist.recursive=Flache Ansicht
 filelist.status.no_files_available_add_files_and_invite=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem lokalen Verzeichnis Dateien hinzu oder laden Sie Benutzer mit Dateien ein.
 filelist.status.no_files_available_add_files_in_folder=Keine Dateien verf\u00fcbar... F\u00fcgen Sie dem lokalen Verzeichnis Dateien hinzu
