--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -268,21 +268,21 @@ file_filter_panel.new_files_only=New files only
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 fileinfo.availability=Availability
 fileinfo.available=Available
-fileinfo.deleted=Deleted
+file_info.deleted=Deleted
 fileinfo.downloading=Downloading
-fileinfo.downloading_from_member=Downloading from {0}
-fileinfo.expected=Expected
+file_info.downloading_from_member=Downloading from {0}
+file_info.expected=Expected
 fileinfo.header=File Details
-fileinfo.ignore=This file is excluded from synchronisation
+file_info.ignore=This file is excluded from synchronisation
 fileinfo.location=Location
 fileinfo.modified_by=Modified by
 fileinfo.modified_date=Modified on
-fileinfo.name=Name
+file_info.name=Name
 fileinfo.newer_available=Newer version available
 fileinfo.new_version_availeble=New version of file available
 fileinfo.normal=Local available
 fileinfo.not_available=Not available
-fileinfo.remote_deleted=Newer version deleted by other user
+file_info.remote_deleted=Newer version deleted by other user
 file_info.recently_downloaded=Recently downloaded
 fileinfo.status=Status
 fileinfo.uploading=Uploading
@@ -296,7 +296,7 @@ filelist.file_filter.label=Search and filter bar
 filelist.file_filter.normal=local
 filelist.file_filter.searchfieldinfo=Enter keywords to search...
 filelist.modified_by=Modified by
-filelist.name=Name
+file_list.name=Name
 filelist.recursive=Flat view
 filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=No files available... add files in you local folder to share them
