--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=Progreso del copiado de archivos
 
 fileinfo.availability=Disponibilidad
 fileinfo.available=Disponible
-fileinfo.deleted=Borrado
+file_info.deleted=Borrado
 fileinfo.downloading=Descargando
-fileinfo.downloading_from_member=Descargando desde {0}
-fileinfo.expected=Esperando
+file_info.downloading_from_member=Descargando desde {0}
+file_info.expected=Esperando
 fileinfo.header=Detalles del archivo
-fileinfo.ignore=El archivo esta excluido de la sincronizaci\u00F3n
-fileinfo.in_recycle_bin=En cesto de Reciclaje
+file_info.ignore=El archivo esta excluido de la sincronizaci\u00F3n
+file_info.in_recycle_bin=En cesto de Reciclaje
 fileinfo.location=Ubicaci\u00F3n
 fileinfo.modified_by=Modificado por
 fileinfo.modified_date=Modificado el
-fileinfo.name=Nombre
+file_info.name=Nombre
 fileinfo.newer_available=Nueva versi\u00F3n disponible
 fileinfo.new_version_availeble=Nueva version del archivo disponible
 fileinfo.normal=Disponible local
 fileinfo.not_available=No disponible
-fileinfo.remote_deleted=Una version mas nueva a sido borrada por otro usuario
+file_info.remote_deleted=Una version mas nueva a sido borrada por otro usuario
 fileinfo.status=Estado
 fileinfo.uploading=Enviando
 fileinfo.version=Versi\u00F3n
@@ -292,7 +292,7 @@ filelist.file_filter.label=Barra de b\u00FAsqueda y filtrado
 filelist.file_filter.normal=local
 filelist.file_filter.searchfieldinfo=Teclee el texto a buscar...
 filelist.modified_by=Modificado por
-filelist.name=Nombre
+file_list.name=Nombre
 filelist.recursive=recursivo
 filelist.status.no_files_available_add_files_and_invite=No hay archivos disponibles... a\u00F1ade archivos en tu carpeta local e invita a mas usuarios a volverse miembros de este PowerFolder por medio de una invitaci\u00F3n.
 filelist.status.no_files_available_add_files_in_folder=No hay archivos disponibles... Agrege archivos en su carpeta local para compartirlos
