--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -266,22 +266,22 @@ file_copier.progress_dialog.title=Copie des fichiers en cours
 
 fileinfo.availability=Disponibilit\u00E9
 fileinfo.available=Disponible
-fileinfo.deleted=Effac\u00E9
+file_info.deleted=Effac\u00E9
 fileinfo.downloading=T\u00E9l\u00E9chargement en cours
-fileinfo.downloading_from_member=T\u00E9l\u00E9chargement depuis {0}
-fileinfo.expected=Attendu
+file_info.downloading_from_member=T\u00E9l\u00E9chargement depuis {0}
+file_info.expected=Attendu
 fileinfo.header=D\u00E9tails du fichier
-fileinfo.ignore=Le fichier est exclu de la synchronisation
-fileinfo.in_recycle_bin=Dans la corbeille
+file_info.ignore=Le fichier est exclu de la synchronisation
+file_info.in_recycle_bin=Dans la corbeille
 fileinfo.location=Emplacement
 fileinfo.modified_by=Modifi\u00E9 par
 fileinfo.modified_date=Modifi\u00E9 le
-fileinfo.name=Nom
+file_info.name=Nom
 fileinfo.newer_available=Nouvelle version disponible
 fileinfo.new_version_availeble=Nouvelle version du fichier disponible
 fileinfo.normal=Disponibilit\u00E9 locale
 fileinfo.not_available=Indisponible
-fileinfo.remote_deleted=Nouvelle version effac\u00E9e par un autre utilisateur
+file_info.remote_deleted=Nouvelle version effac\u00E9e par un autre utilisateur
 fileinfo.status=Etat
 fileinfo.uploading=Emission
 fileinfo.version=Version
@@ -294,7 +294,7 @@ filelist.file_filter.label=Barre de recherche et de filtrage
 filelist.file_filter.normal=local
 filelist.file_filter.searchfieldinfo=Saisir un mot clef pour rechercher ...
 filelist.modified_by=Modifi\u00E9 par
-filelist.name=Nom
+file_list.name=Nom
 filelist.recursive=Vue \u00E0 plat
 filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans un dossier PowerFolder et envoyer des invitations
 filelist.status.no_files_available_add_files_in_folder=Aucun fichier disponible... ajouter des fichiers dans votre dossier local pour les partager
