--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=Copia dei file in corso
 
 fileinfo.availability=Disponibilit\u00E0
 fileinfo.available=Disponibile
-fileinfo.deleted=Cancellato
+file_info.deleted=Cancellato
 fileinfo.downloading=Sto scaricando
-fileinfo.downloading_from_member=Sto scaricando da {0}
-fileinfo.expected=Previsto
+file_info.downloading_from_member=Sto scaricando da {0}
+file_info.expected=Previsto
 fileinfo.header=Dettagli file
-fileinfo.ignore=Questo file \u02A0escluso dalla sincronizzazione
-fileinfo.in_recycle_bin=Nel Cesino
+file_info.ignore=Questo file \u02A0escluso dalla sincronizzazione
+file_info.in_recycle_bin=Nel Cesino
 fileinfo.location=Percorso
 fileinfo.modified_by=Modificato da
 fileinfo.modified_date=Modificato il
-fileinfo.name=Nome
+file_info.name=Nome
 fileinfo.newer_available=Nuova versione disponibile
 fileinfo.new_version_availeble=Nuova versione del file disponibile
 fileinfo.normal=Disponibile in locale
 fileinfo.not_available=Non disponibile
-fileinfo.remote_deleted=Una versione pi\u00F9 recente \u00E8 stata cancellata da un altro utente
+file_info.remote_deleted=Una versione pi\u00F9 recente \u00E8 stata cancellata da un altro utente
 fileinfo.status=Stato
 fileinfo.uploading=Upload in corso
 fileinfo.version=Versione
@@ -292,7 +292,7 @@ filelist.file_filter.label=barra di ricerca e filtro
 filelist.file_filter.normal=locale
 filelist.file_filter.searchfieldinfo=Inserisci una parola da cercare...
 filelist.modified_by=Modificato da
-filelist.name=Nome
+file_list.name=Nome
 filelist.recursive=ricorsivo
 filelist.status.no_files_available_add_files_and_invite=Nessun file disponibile... aggiungi files nella tua cartella locale e chiedi ad altri di aggiungersi a PowerFolder con un Invito
 filelist.status.no_files_available_add_files_in_folder=Nessun file disponibile... Aggiungi file nella tua cartella locale per condividerli
