--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=Kopie voortgang
 
 fileinfo.availability=Beschikbaarheid
 fileinfo.available=Beschikbaar
-fileinfo.deleted=Verwijderd
+file_info.deleted=Verwijderd
 fileinfo.downloading=Downloaden
-fileinfo.downloading_from_member=Downloaden van {0}
-fileinfo.expected=Verwacht
+file_info.downloading_from_member=Downloaden van {0}
+file_info.expected=Verwacht
 fileinfo.header=Bestand details
-fileinfo.ignore=Dit bestand wordt uitgezonderd van synchronizatie
+file_info.ignore=Dit bestand wordt uitgezonderd van synchronizatie
 ##fileinfo.in_recycle_bin=In Recycle Bin
 fileinfo.location=Lokatie
 fileinfo.modified_by=Bewerkt door
 fileinfo.modified_date=Bewerkt op
-fileinfo.name=Naam
+file_info.name=Naam
 fileinfo.newer_available=Nieuwe versie beschikbaar
 fileinfo.new_version_availeble=Nieuwe versie van bestand beschikbaar
 fileinfo.normal=Lokaal beschikbaar
 fileinfo.not_available=Niet beschikbaar
-fileinfo.remote_deleted=Nieuwere versie verwijderd door ander gebruiker
+file_info.remote_deleted=Nieuwere versie verwijderd door ander gebruiker
 fileinfo.status=Status
 fileinfo.uploading=Uploading
 fileinfo.version=Versie
@@ -292,7 +292,7 @@ filelist.file_filter.label=Zoek en filter
 filelist.file_filter.normal=Lokaal
 filelist.file_filter.searchfieldinfo=Vul trefwoord in om te zoeken...
 filelist.modified_by=Veranderd door
-filelist.name=Naam
+file_list.name=Naam
 filelist.recursive=platte lijst
 ##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
