--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=Post\u0119p kopiowania plik\u00f3w
 
 fileinfo.availability=Dost\u0119pno\u015b\u0107
 fileinfo.available=Dost\u0119pny
-fileinfo.deleted=Usuni\u0119ty
+file_info.deleted=Usuni\u0119ty
 fileinfo.downloading=Pobieranie
-fileinfo.downloading_from_member=Pobieranie od {0}
-fileinfo.expected=Oczekiwano
+file_info.downloading_from_member=Pobieranie od {0}
+file_info.expected=Oczekiwano
 fileinfo.header=Szczeg\u00f3\u0142y pliku
-fileinfo.ignore=Ten plik jest wy\u0142\u0105czony z synchronizacji
+file_info.ignore=Ten plik jest wy\u0142\u0105czony z synchronizacji
 ##fileinfo.in_recycle_bin=In Recycle Bin
 fileinfo.location=Po\u0142o\u017cenie
 fileinfo.modified_by=Zmodyfikowany przez
 fileinfo.modified_date=Zmodyfikowany
-fileinfo.name=Nazwa
+file_info.name=Nazwa
 fileinfo.newer_available=Dost\u0119pna nowa wersja
 fileinfo.new_version_availeble=Dost\u0119pna jest nowa wersja pliku
 fileinfo.normal=Dost\u0119pne
 fileinfo.not_available=Niedost\u0119pne
-fileinfo.remote_deleted=Nowsza wersja usuni\u0119ta przez innego u\u017cytkownika
+file_info.remote_deleted=Nowsza wersja usuni\u0119ta przez innego u\u017cytkownika
 fileinfo.status=Status
 fileinfo.uploading=Wysy\u0142anie
 fileinfo.version=Wersja
@@ -292,7 +292,7 @@ filelist.file_filter.label=Szukaj i filtruj
 filelist.file_filter.normal=lokalne
 filelist.file_filter.searchfieldinfo=Wpisz s\u0142owa kluczowe...
 filelist.modified_by=Zmodyfikowany przez
-filelist.name=Nazwa
+file_list.name=Nazwa
 filelist.recursive=p\u0142aski widok
 ##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Nie ma dost\u0119pnych plik\u00f3w... Dodaj pliki do Twojego lokalnego folderu, aby je udost\u0119pnia\u0107
