--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -221,21 +221,21 @@ file_copier.progress_dialog.title=Progresso da c\u00f3pia de arquivos
 
 fileinfo.availability=Disponibilidade
 fileinfo.available=Dispon\u00edvel
-fileinfo.deleted=Apagado
+file_info.deleted=Apagado
 fileinfo.downloading=Baixando
-fileinfo.downloading_from_member=Baixando de {0}
-fileinfo.expected=Esperado
+file_info.downloading_from_member=Baixando de {0}
+file_info.expected=Esperado
 fileinfo.header=Detalhes do Arquivo
-fileinfo.ignore=Este arquivo est\u00e1 excluido da sincroniza\u00e7\u00e3o
+file_info.ignore=Este arquivo est\u00e1 excluido da sincroniza\u00e7\u00e3o
 fileinfo.location=Localiza\u00e7\u00e3o
 fileinfo.modified_by=Modificado por
 fileinfo.modified_date=Modificado em
-fileinfo.name=Nome
+file_info.name=Nome
 fileinfo.newer_available=Dispon\u00edvel vers\u00e3o mais recente
 fileinfo.new_version_availeble=Vers\u00e3o mais recente do arquivo
 fileinfo.normal=Local dispon\u00edvel
 fileinfo.not_available=N\u00e3o dispon\u00edvel
-fileinfo.remote_deleted=Vers\u00e3o mais recente apagada por outro usu\u00e1rio
+file_info.remote_deleted=Vers\u00e3o mais recente apagada por outro usu\u00e1rio
 fileinfo.status=Estado
 fileinfo.uploading=Enviando
 fileinfo.version=Vers\u00e3o
@@ -248,7 +248,7 @@ filelist.file_filter.label=Barra de busca e de filtro
 filelist.file_filter.normal=local
 filelist.file_filter.searchfieldinfo=Digite palavra-chave a buscar...
 filelist.modified_by=Modificado por
-filelist.name=Nome
+file_list.name=Nome
 filelist.recursive=vista total
 filelist.status.no_files_available_add_files_and_invite=N\u00e3o h\u00e1 arquivos dispon\u00edveis... adiciones arquivos na sua pasta local e convide a outros usu\u00e1rios a se associarem a esta pasta PowerFolder
 filelist.status.no_files_available_add_files_in_folder=N\u00e3o h\u00e1 arquivos dispon\u00edveis... para compartilhar arquivos por favor adicione-os na sua pasta local
