--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=Kopiera filer progress
 
 fileinfo.availability=Tillg\u00e4nglighet
 fileinfo.available=Tillg\u00e4nglig
-fileinfo.deleted=Borttagen
+file_info.deleted=Borttagen
 fileinfo.downloading=Laddar ner
-fileinfo.downloading_from_member=Laddar ner fr\u00e5n {0}
-fileinfo.expected=F\u00f6rv\u00e4ntad
+file_info.downloading_from_member=Laddar ner fr\u00e5n {0}
+file_info.expected=F\u00f6rv\u00e4ntad
 fileinfo.header=Fildetaljer
-fileinfo.ignore=Denna fil \u00e4r undantagen fr\u00e5n synkronisering
+file_info.ignore=Denna fil \u00e4r undantagen fr\u00e5n synkronisering
 ##fileinfo.in_recycle_bin=In Recycle Bin
 fileinfo.location=Plats
 fileinfo.modified_by=\u00c4ndrad av
 fileinfo.modified_date=\u00c4ndrad
-fileinfo.name=Namn
+file_info.name=Namn
 fileinfo.newer_available=Nyare version tillg\u00e4nglig
 fileinfo.new_version_availeble=Ny version av filen tillg\u00e4nglig
 fileinfo.normal=Localt tillg\u00e4nglig
 fileinfo.not_available=Inte tillg\u00e4nglig
-fileinfo.remote_deleted=Nyare version borttagen av annan anv\u00e4ndare
+file_info.remote_deleted=Nyare version borttagen av annan anv\u00e4ndare
 fileinfo.status=Status
 fileinfo.uploading=Laddar upp
 fileinfo.version=Version
@@ -292,7 +292,7 @@ filelist.file_filter.label=S\u00f6k och filtrera
 filelist.file_filter.normal=local
 filelist.file_filter.searchfieldinfo=Ange s\u00f6kord...
 filelist.modified_by=\u00c4ndrad av
-filelist.name=Namn
+file_list.name=Namn
 filelist.recursive=platt vy
 ##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=Inga filer tillg\u00e4ngliga... l\u00e4gg till filer i din lokala folder f\u00f6r att dela med dig av dem
