--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=\u062a\u0642\u062f\u0645 \u0639\u0645\u0644\u0
 
 fileinfo.availability=\u0627\u0644\u0627\u0645\u0643\u0627\u0646\u064a\u0629
 fileinfo.available=\u0645\u062a\u0627\u062d
-fileinfo.deleted=\u0645\u064e\u0633\u062d\u064e
+file_info.deleted=\u0645\u064e\u0633\u062d\u064e
 fileinfo.downloading=\u064a\u062a\u0645 \u0627\u0644\u062a\u062d\u0645\u064a\u0644
-fileinfo.downloading_from_member=\u064a\u062a\u0645 \u0627\u0644\u062a\u062d\u0645\u064a\u0644 \u0645\u0646  {0}
-fileinfo.expected=\u0645\u062a\u0648\u0642\u0639
+file_info.downloading_from_member=\u064a\u062a\u0645 \u0627\u0644\u062a\u062d\u0645\u064a\u0644 \u0645\u0646  {0}
+file_info.expected=\u0645\u062a\u0648\u0642\u0639
 fileinfo.header=\u062a\u0641\u0627\u0635\u064a\u0644 \u0627\u0644\u0645\u0644\u0641
-fileinfo.ignore=\u0647\u0630\u0627 \u0627\u0644\u0645\u0644\u0641 \u0627\u0633\u062a\u062b\u0646\u064a \u0645\u0646 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
+file_info.ignore=\u0647\u0630\u0627 \u0627\u0644\u0645\u0644\u0641 \u0627\u0633\u062a\u062b\u0646\u064a \u0645\u0646 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
 ##fileinfo.in_recycle_bin=In Recycle Bin
 fileinfo.location=\u0627\u0644\u0645\u0648\u0642\u0639
 fileinfo.modified_by=\u0639\u064f\u062f\u0651\u0644 \u0628\u0648\u0627\u0633\u0637\u0629
 fileinfo.modified_date=\u0639\u064f\u062f\u0651\u0644 \u0641\u064a
-fileinfo.name=\u0627\u0644\u0627\u0633\u0645
+file_info.name=\u0627\u0644\u0627\u0633\u0645
 fileinfo.newer_available=\u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u062a\u0648\u0641\u0631\u0629
 fileinfo.new_version_availeble=\u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646 \u0627\u0644\u0645\u0644\u0641 \u0645\u062a\u0648\u0641\u0631\u0629
 fileinfo.normal=\u0645\u062d\u0651\u0644\u064a \u0645\u062a\u0648\u0641\u0631
 fileinfo.not_available=\u063a\u064a\u0631 \u0645\u062a\u0648\u0641\u0631
-fileinfo.remote_deleted=\u062a\u0645 \u0645\u062d\u0648 \u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646 \u0642\u0628\u0644 \u0645\u0633\u062a\u062e\u062f\u0645 \u0623\u062e\u0631
+file_info.remote_deleted=\u062a\u0645 \u0645\u062d\u0648 \u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646 \u0642\u0628\u0644 \u0645\u0633\u062a\u062e\u062f\u0645 \u0623\u062e\u0631
 fileinfo.status=\u0627\u0644\u0648\u0636\u0639\u064a\u0629
 fileinfo.uploading=\u064a\u062a\u0645 \u0627\u0644\u0631\u0641\u0639
 fileinfo.version=\u0627\u0644\u0646\u0633\u062e\u0629
@@ -292,7 +292,7 @@ filelist.file_filter.label=\u0634\u0631\u064a\u0637 \u0627\u0644\u0628\u062d\u06
 filelist.file_filter.normal=\u0645\u062d\u0644\u064a
 filelist.file_filter.searchfieldinfo=\u0623\u062f\u062e\u0644 \u0643\u0644\u0645\u0629 \u0623\u0641\u062a\u062a\u0627\u062d\u064a\u0629 \u0644\u0644\u0628\u062d\u062b...
 filelist.modified_by=\u0639\u064f\u062f\u0651\u0644 \u0628\u0648\u0627\u0633\u0637\u0629
-filelist.name=\u0627\u0644\u0627\u0633\u0645
+file_list.name=\u0627\u0644\u0627\u0633\u0645
 filelist.recursive=\u0631\u0624\u064a\u0629 \u0645\u0633\u0637\u062d\u0629
 ##filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this PowerFolder by Invitation
 filelist.status.no_files_available_add_files_in_folder=\u0644\u0627\u064a\u0648\u062c\u062f \u0645\u0644\u0641\u0627\u062a \u0645\u062a\u0627\u062d\u0629 ... \u0642\u0645 \u0628\u0625\u0636\u0627\u0641\u0629 \u0645\u0644\u0641\u0627\u062a \u0641\u064a \u0645\u062c\u0644\u062f\u0643 \u0627\u0644\u0645\u062d\u0644\u064a \u0644\u0645\u0634\u0627\u0631\u0643\u062a\u0647\u0645
