--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -263,22 +263,22 @@ file_copier.progress_dialog.title=\u30D5\u30A1\u30A4\u30EB\u30B3\u30D4\u30FC\u30
 
 fileinfo.availability=\u53D6\u5F97\u53EF\u80FD\u5148
 fileinfo.available=\u53D6\u5F97\u53EF
-fileinfo.deleted=\u524A\u9664\u6E08
+file_info.deleted=\u524A\u9664\u6E08
 fileinfo.downloading=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E2D
-fileinfo.downloading_from_member={0} \u304B\u3089\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E2D
-fileinfo.expected=\u671F\u5F85
+file_info.downloading_from_member={0} \u304B\u3089\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E2D
+file_info.expected=\u671F\u5F85
 fileinfo.header=\u30D5\u30A1\u30A4\u30EB\u306E\u8A73\u7D30
-fileinfo.ignore=\u3053\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u540C\u671F\u306E\u9664\u5916\u5BFE\u8C61
-fileinfo.in_recycle_bin=\u3054\u307F\u7BB1\u5185
+file_info.ignore=\u3053\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u540C\u671F\u306E\u9664\u5916\u5BFE\u8C61
+file_info.in_recycle_bin=\u3054\u307F\u7BB1\u5185
 fileinfo.location=\u5834\u6240
 fileinfo.modified_by=\u66F4\u65B0\u8005
 fileinfo.modified_date=\u5909\u66F4\u65E5\u6642
-fileinfo.name=\u540D\u524D
+file_info.name=\u540D\u524D
 fileinfo.newer_available=\u66F4\u65B0\u7248\u53D6\u5F97\u53EF
 fileinfo.new_version_availeble=\u30D5\u30A1\u30A4\u30EB\u66F4\u65B0\u7248 \u53D6\u5F97\u53EF\u80FD
 fileinfo.normal=\u30ED\u30FC\u30AB\u30EB\u306B\u5B58\u5728
 fileinfo.not_available=\u53D6\u5F97\u4E0D\u53EF
-fileinfo.remote_deleted=\u66F4\u65B0\u7248 \u4ED6\u30E6\u30FC\u30B6\u30FC\u306B\u3088\u308A\u524A\u9664
+file_info.remote_deleted=\u66F4\u65B0\u7248 \u4ED6\u30E6\u30FC\u30B6\u30FC\u306B\u3088\u308A\u524A\u9664
 fileinfo.status=\u72B6\u614B
 fileinfo.uploading=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u4E2D
 fileinfo.version=\u30D0\u30FC\u30B8\u30E7\u30F3
@@ -291,7 +291,7 @@ filelist.file_filter.label=\u691C\u7D22\u304A\u3088\u3073\u30D5\u30A3\u30EB\u30B
 filelist.file_filter.normal=\u30ED\u30FC\u30AB\u30EB
 filelist.file_filter.searchfieldinfo=\u691C\u7D22\u3059\u308B\u30AD\u30FC\u30EF\u30FC\u30C9\u3092\u5165\u529B...
 filelist.modified_by=\u5909\u66F4\u8005
-filelist.name=\u540D\u524D
+file_list.name=\u540D\u524D
 filelist.recursive=\u975E\u968E\u5C64\u8868\u793A
 filelist.status.no_files_available_add_files_and_invite=\u5229\u7528\u53EF\u80FD\u30D5\u30A1\u30A4\u30EB\u306A\u3057... \u30ED\u30FC\u30AB\u30EB\u30D5\u30A9\u30EB\u30C0\u306B\u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0\u3057\u3001\u3053\u306E\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u3078\u306E\u53C2\u52A0\u3092\u62DB\u5F85\u72B6\u3092\u901A\u3058\u3066\u4ED6\u306E\u4EBA\u306B\u8981\u8ACB\u3057\u3066\u304F\u3060\u3055\u3044
 filelist.status.no_files_available_add_files_in_folder=\u53D6\u5F97\u53EF\u80FD\u30D5\u30A1\u30A4\u30EB\u306A\u3057... \u30D5\u30A1\u30A4\u30EB\u3092\u5171\u6709\u3059\u308B\u306B\u306F\u30ED\u30FC\u30AB\u30EB\u30D5\u30A9\u30EB\u30C0\u306B\u30D5\u30A1\u30A4\u30EB\u3092\u8FFD\u52A0\u3057\u3066\u304F\u3060\u3055\u3044
