--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -264,22 +264,22 @@ file_copier.progress_dialog.title=\u590d\u5236\u6587\u4ef6
 
 fileinfo.availability=\u6709\u6548\u6027
 fileinfo.available=\u53ef\u7528
-fileinfo.deleted=\u5220\u9664
+file_info.deleted=\u5220\u9664
 fileinfo.downloading=\u4e0b\u8f7d\u4e2d
-fileinfo.downloading_from_member=\u4ece {0} \u4e0b\u8f7d
-fileinfo.expected=\u9884\u671f
+file_info.downloading_from_member=\u4ece {0} \u4e0b\u8f7d
+file_info.expected=\u9884\u671f
 fileinfo.header=\u6587\u4ef6\u8be6\u60c5
-fileinfo.ignore=\u540c\u6b65\u65f6\u5ffd\u7565\uff08\u4e0d\u8fdb\u884c\u540c\u6b65\uff09\u6b64\u6587\u4ef6
-fileinfo.in_recycle_bin=\u5728\u56de\u6536\u7ad9
+file_info.ignore=\u540c\u6b65\u65f6\u5ffd\u7565\uff08\u4e0d\u8fdb\u884c\u540c\u6b65\uff09\u6b64\u6587\u4ef6
+file_info.in_recycle_bin=\u5728\u56de\u6536\u7ad9
 fileinfo.location=\u4f4d\u7f6e
 fileinfo.modified_by=\u4fee\u6539\u8005
 fileinfo.modified_date=\u4fee\u6539\u65f6\u95f4
-fileinfo.name=\u540d\u79f0
+file_info.name=\u540d\u79f0
 fileinfo.newer_available=\u6709\u66f4\u65b0\u7684\u7248\u672c
 fileinfo.new_version_availeble=\u6587\u4ef6\u6709\u66f4\u65b0\u7684\u7248\u672c
 fileinfo.normal=\u672c\u5730\u53ef\u7528
 fileinfo.not_available=\u65e0\u6548
-fileinfo.remote_deleted=\u65b0\u7248\u672c\u88ab\u5176\u4ed6\u7528\u6237\u5220\u9664
+file_info.remote_deleted=\u65b0\u7248\u672c\u88ab\u5176\u4ed6\u7528\u6237\u5220\u9664
 fileinfo.status=\u72b6\u6001
 fileinfo.uploading=\u4e0a\u4f20\u4e2d
 fileinfo.version=\u7248\u672c
@@ -292,7 +292,7 @@ filelist.file_filter.label=\u67e5\u627e\u5e76\u8fc7\u6ee4
 filelist.file_filter.normal=\u672c\u5730
 filelist.file_filter.searchfieldinfo=\u8f93\u5165\u5173\u952e\u8bcd\u641c\u7d22
 filelist.modified_by=\u4fee\u6539\u8005
-filelist.name=\u540d\u79f0
+file_list.name=\u540d\u79f0
 filelist.recursive=\u5e73\u677f\u89c6\u56fe
 filelist.status.no_files_available_add_files_and_invite=\u6ca1\u6709\u6587\u4ef6\u2026\u2026\u8bf7\u6dfb\u52a0\u672c\u5730\u7684\u6587\u4ef6\u5939\u5e76\u4f7f\u7528\u9080\u8bf7\u6765\u8ba9\u66f4\u591a\u4eba\u52a0\u5165\u8fd9\u4e2aPowerFolder
 filelist.status.no_files_available_add_files_in_folder=\u65e0\u6709\u6548\u6587\u4ef6\u2026\u2026\u8bf7\u5728\u4f60\u7684\u672c\u5730\u6587\u4ef6\u5939\u6dfb\u52a0\u5171\u4eab\u6587\u4ef6
