#790 - transfer offer UI for single file transfer

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -286,8 +286,8 @@ dialog.update_check.nothingNeverAsk=Nicht mehr erinnern
 dialog.update_check.text=Eine neue Version von PowerFolder ist verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
 dialog.update_check.title=Update verf\u00fcgbar
 dialog.user_select.online_only=
-dialog.user_select.text=W\u00e4hlen Sie die Benutzer aus. Strg halten f\u00fcr mehrfache Auswahl.
-dialog.user_select.title=Benutzer ausw\u00e4hlen
+dialog.node_select.text=W\u00e4hlen Sie die Benutzer aus. Strg halten f\u00fcr mehrfache Auswahl.
+dialog.node_select.title=Benutzer ausw\u00e4hlen
 
 disable_silent_mode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disable_silent_mode.key=w
@@ -1119,8 +1119,8 @@ select_invitation.text1=Einladungen werden benötigt um Zugriff zu erhalten
 select_invitation.text2=Senden Sie nie einem Unbekannten ein Einladung. 
 
 send_invitation.example_email_address=Email des Empfängers eingeben
-send_invitation.multi_users=Mehrere ausgew\u00e4hlt
-send_invitation.no_users=Keine Auswahl
+dialog.node_select.multi_users=Mehrere ausgew\u00e4hlt
+dialog.node_select.no_users=Keine Auswahl
 send_invitation.select_user.text=Auswählen
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
