--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -223,8 +223,8 @@ dialog.update_check.nothingNeverAsk=Nothing and Never ask again
 dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.update_check.title=Newer version available
 dialog.user_select.online_only=
-dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
-dialog.user_select.title=Select Users
+dialog.node_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+dialog.node_select.title=Select Users
 
 disable_silent_mode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
 disable_silent_mode.key=w
@@ -1011,8 +1011,8 @@ select_invitation.message_text=Enter a message for the receiver
 select_invitation.folder_text=Select folder to send invitation for
 
 send_invitation.example_email_address=email@domain.com
-send_invitation.multi_users=Multiple users selected
-send_invitation.no_users=No users selected
+dialog.node_select.multi_users=Multiple users selected
+dialog.node_select.no_users=No users selected
 send_invitation.select_user.text=Select user
 
 send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
