--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=No hacer nada y no preguntar de nuevo
 dialog.update_check.text=Est\u00E1 disponible una nueva versi\u00F3n de PowerFolder            \n\nEsta versi\u00F3n\: v{0}\nUltima disponible\: v{1} (la m\u00E1s nueva)\n
 dialog.update_check.title=Nueva versi\u00F3n disponible
 dialog.user_select.online_only=solo en linea
-dialog.user_select.text=Seleccionar los usuarios que seran invitados.  Mantener la tecla Ctrl oprimida para seleccionar multiples usuarios.
-dialog.user_select.title=Seleccionar Usuarios
+dialog.node_select.text=Seleccionar los usuarios que seran invitados.  Mantener la tecla Ctrl oprimida para seleccionar multiples usuarios.
+dialog.node_select.title=Seleccionar Usuarios
 
 disable_silent_mode.description=Modo silencioso activo, no se detectar\u00E1 archivos nuevos o modificados. Pulse para cambiar a modo completo
 disable_silent_mode.key=w
@@ -1054,8 +1054,8 @@ select_invitation.text1=Una invitaci\u00F3n es requisito para unirse a una carpe
 select_invitation.text2=Nunca mande archivos por invitacion a usuarios que no de confianza.
 
 send_invitation.example_email_address=email@dominio.com
-send_invitation.multi_users=Multiple selecci\u00F3n de usuarios
-send_invitation.no_users=Ning\u00FAn usuario ha sido seleccionado
+dialog.node_select.multi_users=Multiple selecci\u00F3n de usuarios
+dialog.node_select.no_users=Ning\u00FAn usuario ha sido seleccionado
 send_invitation.select_user.text=Selccionar usuario
 
 send_invitation.allFolders.text=No fue posibible invitar a {0} a ninguna carpeta\nEste usuario ya es miembro de todas las carpetas
