--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -217,8 +217,8 @@ dialog.update_check.nothingNeverAsk=Ne rien faire et ne jamais me reposer la que
 dialog.update_check.text=Une nouvelle version de PowerFolder est disponible            \n\nVersion actuelle\: v{0}\nVersion disponible\: v{1} (plus r\u00E9cente)\n
 dialog.update_check.title=Nouvelle version disponible
 dialog.user_select.online_only=
-dialog.user_select.text=Choisir un utilisateur. Maintenair la touche Ctrl pour en choisir plusieurs.
-dialog.user_select.title=Choisir un utilisateur
+dialog.node_select.text=Choisir un utilisateur. Maintenair la touche Ctrl pour en choisir plusieurs.
+dialog.node_select.title=Choisir un utilisateur
 
 disable_silent_mode.description=Mode silencieux activ\u00E9, les fichiers ajout\u00E9s/modifi\u00E9s ne seront pas trouv\u00E9s. Passer en mode Actif.
 disable_silent_mode.key=M
@@ -1057,8 +1057,8 @@ select_invitation.text1=Un fichier d'invitation est n\u00E9cessaire pour rejoind
 select_invitation.text2=Ne jamais envoyer d'invitation \u00E0 des personnes inconnues.
 
 send_invitation.example_email_address=indiqueradressedemessagerie@domaine.fr
-send_invitation.multi_users=S\u00E9lection de plusieurs utilisateurs
-send_invitation.no_users=Aucun utilisateur s\u00E9lectionn\u00E9
+dialog.node_select.multi_users=S\u00E9lection de plusieurs utilisateurs
+dialog.node_select.no_users=Aucun utilisateur s\u00E9lectionn\u00E9
 send_invitation.select_user.text=Choisir l'utilisateur
 
 send_invitation.allFolders.text=Impossible d'inviter {0} \u00E0 un dossier\nL'utilisateur fait d\u00E9j\u00E0 partie de tous vos dossiers
