--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=Nigdy wi\u0119cej o nic nie pytaj
 dialog.update_check.text=Dost\u0119pna jest nowa wersja PowerFolder            \n\nObecna wersja\: v{0}\nNajnowsza dost\u0119pna\: v{1} (nowsza)\n
 dialog.update_check.title=Dost\u0119pna jest nowa wersja
 dialog.user_select.online_only=Tylko online
-dialog.user_select.text=Wybierz u\u017cytkownik\u00f3w, kt\u00f3rych chcesz zaprosi\u0107. Przytrzymaj Ctrl, aby zaznaczy\u0107 kilku u\u017cytkownik\u00f3w.
-dialog.user_select.title=Wybierz U\u017cytkownik\u00f3w
+dialog.node_select.text=Wybierz u\u017cytkownik\u00f3w, kt\u00f3rych chcesz zaprosi\u0107. Przytrzymaj Ctrl, aby zaznaczy\u0107 kilku u\u017cytkownik\u00f3w.
+dialog.node_select.title=Wybierz U\u017cytkownik\u00f3w
 
 disable_silent_mode.description=Tryb cichy jest aktywny, dodane/zmodyfikowane pliki nie b\u0119d\u0105 dost\u0119pne. Wci\u015bnij, aby prze\u0142\u0105czy\u0107 w tryb pe\u0142ny
 disable_silent_mode.key=w
@@ -1055,8 +1055,8 @@ scan_folder.name=Synchronizuj teraz
 ##select_invitation.text2=Never give out invitation files to untrusted people.
 
 send_invitation.example_email_address=email@domena.com
-send_invitation.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
-send_invitation.no_users=Nie zaznaczono u\u017cytkownika
+dialog.node_select.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
+dialog.node_select.no_users=Nie zaznaczono u\u017cytkownika
 ##send_invitation.select_user.text=Select user
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
