--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -183,8 +183,8 @@ dialog.update_check.nothingNeverAsk=Nada e n\u00e3o pergunte de novo
 dialog.update_check.text=PowerFolder tem uma nova vers\u00e3o dispon\u00edvel            \n\nEsta vers\u00e3o\: v{0}\nUltima dispon\u00edvel\: v{1} (mais recente)\n
 dialog.update_check.title=Dispon\u00edvel vers\u00e3o mais recente
 dialog.user_select.online_only=
-dialog.user_select.text=Selecione usu\u00e1rios para convidar. Mantenha a tecla Ctrl pressionada para selecionar v\u00e1rios usu\u00e1rios ao mesmo tempo.
-dialog.user_select.title=Selecionar Usu\u00e1rios
+dialog.node_select.text=Selecione usu\u00e1rios para convidar. Mantenha a tecla Ctrl pressionada para selecionar v\u00e1rios usu\u00e1rios ao mesmo tempo.
+dialog.node_select.title=Selecionar Usu\u00e1rios
 
 disable_silent_mode.description=Modo silecioso est\u00e1 ativo, arquivos adicionados/modificados n\u00e3o ser\u00e3o encontrados. Pressione para modo completo
 disable_silent_mode.key=a
@@ -933,9 +933,9 @@ send_invitation.example_emailaddress=email@domain.com
 send_invitation.folder.text=Enviar convite para
 send_invitation.folder.title=Enviar convite
 send_invitation.key=i
-send_invitation.multi_users=V\u00e1rios usu\u00e1rios selecionados
+dialog.node_select.multi_users=V\u00e1rios usu\u00e1rios selecionados
 send_invitation.name=Enviar convite
-send_invitation.no_users=Nenhum usu\u00e1rio selecionado
+dialog.node_select.no_users=Nenhum usu\u00e1rio selecionado
 send_invitation.placetostore=Escolha um lugar para armazenar o convite
 send_invitation.subject=Convite para a pasta PowerFolder '{0}'
 send_invitation.toclipboard=Para \u00e1rea de transfer\u00eancia...
@@ -1129,7 +1129,7 @@ send_invitation.example_email_address=email@domain.com
 wizard.send_invitations.save_to_file=Salve em arquivo
 wizard.send_invitations.over_powerfolder=Envie pelo PowerFolder agora
 wizard.setup_folder.title=Crie uma pasta
-send_invitation.no_users=
+dialog.node_select.no_users=
 
 wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
 wizard.setup_dns.enter_dns=Digite seu dns (din\u00e2mico)
