--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=\u0644\u0627\u0634\u064a\u0621 \u0648\u0644\
 dialog.update_check.text=\u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646  PowerFolder \u0645\u062a\u0648\u0641\u0631\u0629   \n\n\u0647\u0630\u0647 \u0627\u0644\u0646\u0633\u062e\u0629 \: v{0}\n\u0627\u0644\u0627\u062d\u062f\u062b \u0645\u062a\u0648\u0641\u0631\u0629 \: v{1} (\u0623\u062d\u062f\u062b)\n
 dialog.update_check.title=\u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u062a\u0648\u0641\u0631\u0629
 dialog.user_select.online_only=
-dialog.user_select.text=\u0623\u062e\u062a\u0631 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0644\u062a\u062f\u0639\u0648\u0647\u0645. \u0627\u0633\u062a\u0645\u0631 \u0628\u0627\u0644\u0636\u063a\u0637 \u0639\u0644\u0649 \u0632\u0631 Ctrl \u0644\u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0645\u0633\u062a\u062e\u062f\u0645.
-dialog.user_select.title=\u0623\u062e\u062a\u0631 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646
+dialog.node_select.text=\u0623\u062e\u062a\u0631 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0644\u062a\u062f\u0639\u0648\u0647\u0645. \u0627\u0633\u062a\u0645\u0631 \u0628\u0627\u0644\u0636\u063a\u0637 \u0639\u0644\u0649 \u0632\u0631 Ctrl \u0644\u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0645\u0633\u062a\u062e\u062f\u0645.
+dialog.node_select.title=\u0623\u062e\u062a\u0631 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646
 
 disable_silent_mode.description=\u0627\u0644\u0648\u0636\u0639 \u0627\u0644\u0635\u0627\u0645\u062a \u0642\u064a\u062f \u0627\u0644\u0639\u0645\u0644, \u0625\u0636\u0627\u0641\u0629/ \u062a\u0639\u0651\u062f\u064a\u0644 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u063a\u064a\u0631 \u0645\u0648\u062c\u0648\u062f\u0629 . \u0623\u0636\u063a\u0637 \u0644\u0644\u0627\u0646\u062a\u0642\u0627\u0644 \u0644\u0644\u0648\u0636\u0639 \u0627\u0644\u0643\u0627\u0645\u0644
 disable_silent_mode.key=\u0635
@@ -1055,8 +1055,8 @@ scan_folder.name=\u0645\u0632\u0627\u0645\u0646\u0629 \u0627\u0644\u0627\u0646
 ##select_invitation.text2=Never give out invitation files to untrusted people.
 
 send_invitation.example_email_address=email@domain.com
-send_invitation.multi_users=\u062a\u0645 \u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621 \u0645\u062a\u0639\u062f\u062f\u064a\u0646
-send_invitation.no_users=\u0644\u0645 \u064a\u062a\u0645 \u0625\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621
+dialog.node_select.multi_users=\u062a\u0645 \u0627\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621 \u0645\u062a\u0639\u062f\u062f\u064a\u0646
+dialog.node_select.no_users=\u0644\u0645 \u064a\u062a\u0645 \u0625\u062e\u062a\u064a\u0627\u0631 \u0623\u0639\u0636\u0627\u0621
 ##send_invitation.select_user.text=Select user
 
 ##send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
