--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=Non chiedere pi\u00F9 nulla
 dialog.update_check.text=Una nuova versione di PowerFolder \u00E8 disponibile            \n\nQuesta versione\: v{0}\nUltima versione\: v{1} (recente)\n
 dialog.update_check.title=Nuova versione disponibile
 dialog.user_select.online_only=
-dialog.user_select.text=Seleziona utenti da invitare. Tieni premuto il tasto Ctrl per selezione multipla di utenti.
-dialog.user_select.title=Seleziona utenti
+dialog.node_select.text=Seleziona utenti da invitare. Tieni premuto il tasto Ctrl per selezione multipla di utenti.
+dialog.node_select.title=Seleziona utenti
 
 disable_silent_mode.description=Siletmode \u00E8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00E0 completa.
 disable_silent_mode.key=S
@@ -1055,8 +1055,8 @@ select_invitation.text1=E' necessario avere un file di invito per condividere un
 select_invitation.text2=Non inviare files di invito a persone sconosciute.
 
 send_invitation.example_email_address=email@domain.com
-send_invitation.multi_users=Utenti multipli selezionati
-send_invitation.no_users=Nessun utente selezionato
+dialog.node_select.multi_users=Utenti multipli selezionati
+dialog.node_select.no_users=Nessun utente selezionato
 send_invitation.select_user.text=Seleziona utente
 
 send_invitation.allFolders.text=Impossibile invitare {0} in una cartella\nL'utente partecipa gi\u00E0 a tutte le tue cartelle
