--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=\u4ECA\u56DE\u306F\u4F55\u3082\u305B\u305A\u
 dialog.update_check.text=PowerFolder \u306E\u66F4\u65B0\u7248\u304C\u5165\u624B\u53EF\u80FD\u3067\u3059\u3002 \n\n\u672C\u7248\: v{0}\n\u66F4\u65B0\u7248\: v{1}\uFF08\u6700\u65B0\uFF09\n
 dialog.update_check.title=\u66F4\u65B0\u7248\u5165\u624B\u53EF\u80FD
 ##dialog.user_select.online_only=
-dialog.user_select.text=\u62DB\u5F85\u3059\u308B\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3057\u307E\u3059\u3002\u8907\u6570\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3059\u308B\u306B\u306F Ctrl \u30AD\u30FC\u3092\u62BC\u3057\u306A\u304C\u3089\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-dialog.user_select.title=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
+dialog.node_select.text=\u62DB\u5F85\u3059\u308B\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3057\u307E\u3059\u3002\u8907\u6570\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3059\u308B\u306B\u306F Ctrl \u30AD\u30FC\u3092\u62BC\u3057\u306A\u304C\u3089\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+dialog.node_select.title=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
 
 disable_silent_mode.description=\u30B5\u30A4\u30EC\u30F3\u30C8\u30E2\u30FC\u30C9\u304C\u73FE\u5728\u6709\u52B9\u3001\u5909\u66F4\u3084\u8FFD\u52A0\u3055\u308C\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u691C\u51FA\u306F\u4F11\u6B62\u3001\u3053\u306E\u30DC\u30BF\u30F3\u3092\u62BC\u3059\u3068\u30D5\u30EB\u30E2\u30FC\u30C9\u306B\u5FA9\u5E30
 disable_silent_mode.key=W
@@ -1052,8 +1052,8 @@ select_invitation.text1=\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3059\u308B\u
 select_invitation.text2=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306F\u4FE1\u7528\u3067\u304D\u306A\u3044\u4EBA\u306B\u6C7A\u3057\u3066\u6E21\u3055\u306A\u3044\u3067\u304F\u3060\u3055\u3044\u3002
 
 send_invitation.example_email_address=email@domain.com
-send_invitation.multi_users=\u8907\u6570\u9078\u629E\u30E6\u30FC\u30B6\u30FC
-send_invitation.no_users=\u9078\u629E\u30E6\u30FC\u30B6\u30FC\u306A\u3057
+dialog.node_select.multi_users=\u8907\u6570\u9078\u629E\u30E6\u30FC\u30B6\u30FC
+dialog.node_select.no_users=\u9078\u629E\u30E6\u30FC\u30B6\u30FC\u306A\u3057
 send_invitation.select_user.text=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
 
 send_invitation.allFolders.text={0} \u306F\u3069\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u3082\u53C2\u52A0\u3055\u305B\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002\n\u30E6\u30FC\u30B6\u30FC\u306F\u3042\u306A\u305F\u306E\u5168\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u6E08\u307F\u3067\u3059\u3002
