--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -215,8 +215,8 @@ dialog.update_check.nothingNeverAsk=\u4e0d\u518d\u8be2\u95ee
 dialog.update_check.text=\u5df2\u6709\u66f4\u65b0\u7248\u672c\u7684 PowerFolder \n\n\u5f53\u524d\u7248\u672c\uff1a v{0}\n\u6700\u65b0\u7248\u672c\uff1a v{1} \uff08\u66f4\u65b0\uff09\n
 dialog.update_check.title=\u5df2\u6709\u66f4\u65b0\u7684\u7248\u672c
 dialog.user_select.online_only=
-dialog.user_select.text=\u9009\u62e9\u8981\u53d1\u9001\u9080\u8bf7\u7684\u7528\u6237\u3002\u6309\u4f4fCtrl\u952e\u53ef\u4ee5\u540c\u65f6\u9009\u62e9\u591a\u4e2a\u7528\u6237\u3002
-dialog.user_select.title=\u9009\u62e9\u7528\u6237
+dialog.node_select.text=\u9009\u62e9\u8981\u53d1\u9001\u9080\u8bf7\u7684\u7528\u6237\u3002\u6309\u4f4fCtrl\u952e\u53ef\u4ee5\u540c\u65f6\u9009\u62e9\u591a\u4e2a\u7528\u6237\u3002
+dialog.node_select.title=\u9009\u62e9\u7528\u6237
 
 disable_silent_mode.description=\u6fc0\u6d3b\uff01\u5f53\u524d\u5904\u4e8e\u4f11\u7720\u6a21\u5f0f\uff0c\u589e\u52a0/\u4fee\u6539\u7684\u6587\u4ef6\u5c06\u4e0d\u80fd\u627e\u5230\u3002
 disable_silent_mode.key=w
@@ -1054,8 +1054,8 @@ select_invitation.text1=\u52a0\u5165\u6587\u4ef6\u5939\u9700\u8981\u9080\u8bf7\u
 select_invitation.text2=\u4ece\u4e0d\u53d1\u653e\u9080\u8bf7\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba
 
 send_invitation.example_email_address=email@domain.com
-send_invitation.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
-send_invitation.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
+dialog.node_select.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
+dialog.node_select.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
 send_invitation.select_user.text=\u9009\u62e9\u7528\u6237
 
 send_invitation.allFolders.text=\u4e0d\u80fd\u9080\u8bf7 {0} \u52a0\u5165\u4efb\u4f55\u6587\u4ef6\u5939\n\u8be5\u7528\u6237\u5df2\u7ecf\u52a0\u5165\u4f60\u7684\u6240\u6709\u6587\u4ef6\u5939
